[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/lootboxes.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphic/ButtonBuyPressed.png" type="Texture" id=3]
[ext_resource path="res://graphic/playerGreen.png" type="Texture" id=4]
[ext_resource path="res://graphic/playerPink.png" type="Texture" id=5]
[ext_resource path="res://graphic/BackButton.png" type="Texture" id=6]
[ext_resource path="res://graphic/BackButtonHover.png" type="Texture" id=7]
[ext_resource path="res://graphic/ButtonBuy.png" type="Texture" id=8]
[ext_resource path="res://graphic/ButtonBuyHover.png" type="Texture" id=9]
[ext_resource path="res://graphic/BackButtonPressed.png" type="Texture" id=10]
[ext_resource path="res://graphic/BackgroundMenu.png" type="Texture" id=11]
[ext_resource path="res://font/ArcadeClassic.tres" type="DynamicFont" id=12]
[ext_resource path="res://graphic/lootbox.png" type="Texture" id=13]
[ext_resource path="res://Audio/level-up-bonus-sequence-1-186890.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/click-button-140881.wav" type="AudioStream" id=15]
[ext_resource path="res://graphic/Black.png" type="Texture" id=16]

[node name="lootboxes" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 336, 312 )
texture = ExtResource( 11 )

[node name="UI" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0117647
anchor_top = 0.0111111
anchor_right = 1.01176
anchor_bottom = 0.122222
margin_right = -6.10352e-05
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buy" type="TextureButton" parent="."]
anchor_left = 0.388235
anchor_top = 0.577778
anchor_right = 0.623529
anchor_bottom = 0.688889
margin_top = -3.05176e-05
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Green" type="Sprite" parent="."]
visible = false
position = Vector2( 344, 328 )
texture = ExtResource( 4 )

[node name="Pink" type="Sprite" parent="."]
visible = false
position = Vector2( 344, 328 )
texture = ExtResource( 5 )

[node name="Back" type="TextureButton" parent="."]
anchor_left = 0.388235
anchor_top = 0.755556
anchor_right = 0.623529
anchor_bottom = 0.866667
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Lootbox" type="Label" parent="."]
margin_left = 152.0
margin_top = 168.0
margin_right = 402.0
margin_bottom = 188.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 12 )
text = "Buy  Lootbox  for  100  Space-Bucks"
align = 1

[node name="LootboxSprite" type="Sprite" parent="."]
position = Vector2( 344, 288 )
texture = ExtResource( 13 )

[node name="NotEnough" type="Label" parent="."]
visible = false
margin_left = 144.0
margin_top = 384.0
margin_right = 403.0
margin_bottom = 401.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 12 )
text = "You  dont  have  enough  spacebucks"

[node name="GreenBought" type="Label" parent="."]
visible = false
margin_left = 144.0
margin_top = 384.0
margin_right = 403.0
margin_bottom = 401.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 12 )
text = "You  Got  The  Green  Spaceship"
align = 1

[node name="PinkBought" type="Label" parent="."]
visible = false
margin_left = 144.0
margin_top = 384.0
margin_right = 403.0
margin_bottom = 401.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 12 )
text = "You  Got  The  Pink  Spaceship"
align = 1

[node name="AllBought" type="Label" parent="."]
visible = false
margin_left = 120.0
margin_top = 384.0
margin_right = 414.0
margin_bottom = 401.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 12 )
text = "You  Own  All  Prices  From  This  Lootbox"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="RewardSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="ClickSFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="ClickSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 340, 360 )
current = true

[node name="Border1" type="Sprite" parent="."]
position = Vector2( -2384.5, 161 )
scale = Vector2( 9.30664, 8.375 )
texture = ExtResource( 16 )

[node name="Border2" type="Sprite" parent="."]
position = Vector2( 2195, 1530.5 )
scale = Vector2( 8.64453, 3.1582 )
texture = ExtResource( 16 )

[node name="Border3" type="Sprite" parent="."]
position = Vector2( 2552.5, -644 )
scale = Vector2( 7.29883, 5.35156 )
texture = ExtResource( 16 )

[node name="Border4" type="Sprite" parent="."]
position = Vector2( 407, -1018.5 )
scale = Vector2( 1.59375, 3.97461 )
texture = ExtResource( 16 )

[connection signal="pressed" from="Buy" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="ClickSFX2" to="." method="_on_ClickSFX2_finished"]
